# OS

./: CMakeLists.txt
HW2/: 1.bash
HW5/: HW5.md  receiver  receiver.c  sender  sender.c
IHW1/: converter.h  Отчёт.md
IHW1/10/: receiver  receiver.c  sender  sender.c
IHW1/4/: 4  4.c  in1.txt  in2.txt  in3.txt  in4.txt  in5.txt  out1.txt  out2.txt  out3.txt  out4.txt  out5.txt
IHW1/5/: 5  5.c  in1.txt  in2.txt  in3.txt  in4.txt  in5.txt  out1.txt  out2.txt  out3.txt  out4.txt  out5.txt
IHW1/6/: 6  6.c  in1.txt  in2.txt  in3.txt  in4.txt  in5.txt  out1.txt  out2.txt  out3.txt  out4.txt  out5.txt
IHW1/7/: 7  7.c  in1.txt  in2.txt  in3.txt  in4.txt  in5.txt  out1.txt  out2.txt  out3.txt  out4.txt  out5.txt
IHW1/8/: in1.txt  in2.txt  in3.txt  in4.txt  in5.txt  out1.txt  out2.txt  out3.txt  out4.txt  out5.txt  receiver  receiver.c  sender  sender.c
IHW1/9/: in1.txt  in2.txt  in3.txt  in4.txt  in5.txt  out1.txt  out2.txt  out3.txt  out4.txt  out5.txt  receiver  receiver.c  sender  sender.c
IHW2/: hive.c  hive.h  Отчёт.md
IHW2/4-5/: unnamed  unnamed.c
IHW2/6-7/: named  named.c
IHW3/: Отчёт.md
IHW3/10/тесты/: bees.txt  server.txt
IHW3/4-5/: bee_client.cpp  server.cpp
IHW3/4-5/тесты/: input3.txt  output1.txt  output3.txt
IHW3/6-7/: bee_client  winnie_pooh_client.cpp
IHW3/6-7/тесты/: input1.txt  input2.txt  input3.txt  (+3 more)
IHW3/8/: monitor_client.cpp  server
IHW3/9/: bee_client.cpp  monitor_client  server.cpp  winnie_pooh_client
IHW4/: Отчёт.md
IHW4/4-5/: bee_client  bee_client.cpp  server  server.cpp  winnie_pooh_client  winnie_pooh_client.cpp
(+19 files in other folders)
