cmake_minimum_required(VERSION 3.26)
project(OS CXX)

set(CMAKE_C_STANDARD 23)

add_executable(OS
        IHW3/4-5/server.cpp
        IHW3/4-5/server.cpp
        IHW3/4-5/bee_client.cpp
        IHW3/4-5/winnie_pooh_client.cpp
        IHW3/6-7/monitor_client.cpp
        IHW3/6-7/server.cpp
        IHW3/6-7/bee_client.cpp
        IHW3/6-7/winnie_pooh_client.cpp
        IHW3/8/server.cpp
        IHW3/10/server.cpp
)
